--- a/src/app/course-card/course-card.component.css
+++ b/src/app/course-card/course-card.component.css
@@ -12,3 +12,26 @@
     color: blue;
 }
 
+.container.beginner{
+    background-color: lightblue;
+}
+
+.container.advance{
+    background-color: lightcoral;
+}
+
+.container.intermideate{
+    background-color: lightgray;
+}
+
+.course-level .level{
+    border: 1px solid black;
+    color: white;
+    background-color: rgb(154, 111, 111);
+    width: fit-content;
+    margin-bottom: 10px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+}
+
